--- a/code_celix_user_panel/frontend/src/Stylings/Complaint.css
+++ b/code_celix_user_panel/frontend/src/Stylings/Complaint.css
@@ -1,3 +1,7 @@
+*{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 /* Form container */
 .complaint-form {
   max-width: 700px;
